# inline-c

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
