[package]
name = "inline-c"
version = "0.1.0"
edition = "2021"
description = "Write and execute C code inside Rust (MSVC only)"
license = "BSD-3-Clause"
authors = ["Felix Schütt <felix@wasmer.io>"]
repository = "https://github.com/fschutt/wasmer-inline-c-rs"
homepage = "https://github.com/fschutt/wasmer-inline-c-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["test", "c", "cpp"]

[dependencies]
tempfile = "3.1"
inline-c-macro = { path = "./macros/", version = "0.1" }
regex = "1.6"
lazy_static = "1.4"
cc = "1.0"
target-lexicon = "0.11"
assert_cmd = "1.0"
predicates = "2"

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "macros",
]
